Resolve Overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -1461,7 +1461,7 @@ blockquote {
 
 
 /* Dark Mode */
-label {
+.theme-label {
   width: 70px;
   height: 30px;
   position: absolute;
@@ -1474,7 +1474,7 @@ label {
   margin-top: 44px;
     margin-left: -13px;
 }
-label:after {
+.theme-label:after {
   content: "";
   width: 23px;
   height: 23px;
@@ -1486,20 +1486,20 @@ label:after {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-input{
+#dark-mode-toggle{
   width: 0;
   height: 0;
   visibility: hidden;
 }
-input:checked + label{
+#dark-mode-toggle:checked + .theme-label{
   background: #242424;
 }
-input:checked  + label:after{
+#dark-mode-toggle:checked  + .theme-label:after{
   left: 62px;
   transform: translateX(-100%);
   background: linear-gradient(100deg,#777, #3a3a3a);
 }
-label:active:after{
+.theme-label:active:after{
   width: 45px;
 }
 .background{
@@ -1509,7 +1509,7 @@ label:active:after{
   position:absolute;
   transition: 0.3s;
 }
-input:checked + label + .background{
+#dark-mode-toggle:checked + .theme-label + .background{
   background: #242424;
 }
 
